overlapping feed fix

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -31,7 +31,6 @@
       background-image:url(../img/home/slide1.jpg);
       background-size: cover;
       background-position-y: 50%;
-      margin-bottom: -45px;
     }
 
     .welcome-title {
